--- a/src/input_common/CMakeLists.txt
+++ b/src/input_common/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(input_common STATIC
     main.h
     motion_emu.cpp
     motion_emu.h
+    precompiled_headers.h
     touch_from_button.cpp
     touch_from_button.h
     sdl/sdl.cpp
@@ -37,3 +38,7 @@ target_link_libraries(input_common PUBLIC core PRIVATE common ${Boost_LIBRARIES}
 target_include_directories(input_common PRIVATE ${LIBUSB_INCLUDE_DIR})
 target_link_libraries(input_common PUBLIC ${LIBUSB_LIBRARIES})
 set_target_properties(input_common PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${ENABLE_LTO})
+
+if (CITRA_USE_PRECOMPILED_HEADERS)
+    target_precompile_headers(input_common PRIVATE precompiled_headers.h)
+endif()
