--- a/src/web_service/CMakeLists.txt
+++ b/src/web_service/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(web_service STATIC
     announce_room_json.cpp
     announce_room_json.h
+    precompiled_headers.h
     telemetry_json.cpp
     telemetry_json.h
     verify_login.cpp
@@ -21,4 +22,8 @@ if (ANDROID)
     target_link_libraries(web_service PRIVATE ifaddrs)
 elseif(WIN32)
     target_link_libraries(web_service PRIVATE crypt32)
+endif()
+
+if (CITRA_USE_PRECOMPILED_HEADERS)
+    target_precompile_headers(web_service PRIVATE precompiled_headers.h)
 endif()
