Add option to configure to download system files from Nintendo Update Service (#6269)
Co-authored-by: B3n30 <benediktthomas@gmail.com>

--- a/src/web_service/CMakeLists.txt
+++ b/src/web_service/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_library(web_service STATIC
     announce_room_json.cpp
     announce_room_json.h
+    nus_download.cpp
+    nus_download.h
+    nus_titles.h
     precompiled_headers.h
     telemetry_json.cpp
     telemetry_json.h
