common\CMakeLists.txt: add missing arch.h (#6359)

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -58,6 +58,7 @@ add_library(common STATIC
     aarch64/cpu_detect.h
     alignment.h
     announce_multiplayer_room.h
+    arch.h
     archives.h
     assert.h
     atomic_ops.h
