citra_qt: Prevent OS sleep on Linux when a game is running (#6249)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,6 +211,10 @@ if (ENABLE_QT)
 
     find_package(Qt5 REQUIRED COMPONENTS Widgets Multimedia Concurrent ${QT_PREFIX_HINT})
 
+    if (UNIX AND NOT APPLE)
+        find_package(Qt5 REQUIRED COMPONENTS DBus ${QT_PREFIX_HINT})
+    endif()
+
     if (ENABLE_QT_TRANSLATION)
         find_package(Qt5 REQUIRED COMPONENTS LinguistTools ${QT_PREFIX_HINT})
     endif()
