--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,6 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.image }}-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-${{ matrix.image }}-
-      - name: Query tag name
-        uses: little-core-labs/get-git-tag@v3.0.2
-        id: tagName
       - name: Build
         run: ./.ci/${{ matrix.image }}/docker.sh
         env:
@@ -88,9 +85,6 @@ jobs:
           key: ${{ runner.os }}-macos-${{ matrix.arch }}-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-macos-${{ matrix.arch }}-
-      - name: Query tag name
-        uses: little-core-labs/get-git-tag@v3.0.2
-        id: tagName
       - name: Install dependencies
         run: ./.ci/macos/deps.sh
       - name: Build
@@ -113,9 +107,6 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: Query tag name
-        uses: little-core-labs/get-git-tag@v3.0.2
-        id: tagName
       - name: Download x86 build
         uses: actions/download-artifact@master
         with:
@@ -154,9 +145,6 @@ jobs:
           key: ${{ runner.os }}-win-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-win-
-      - name: Query tag name
-        uses: little-core-labs/get-git-tag@v3.0.2
-        id: tagName
       - name: Install dependencies
         run: ./.ci/windows-msvc/deps.sh
         shell: bash
@@ -190,9 +178,12 @@ jobs:
           key: ${{ runner.os }}-android-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-android-
-      - name: Query tag name
-        uses: little-core-labs/get-git-tag@v3.0.2
-        id: tagName
+      - name: Set tag name
+        run: |
+          if [[ "$GITHUB_REF_NAME" =~ ^canary- ]] || [[ "$GITHUB_REF_NAME" =~ ^nightly- ]]; then
+              echo "GIT_TAG_NAME=$GITHUB_REF_NAME" >> $GITHUB_ENV
+          fi
+          echo $GIT_TAG_NAME
       - name: Deps
         run: |
           sudo apt-get update
@@ -229,20 +220,17 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     steps:
       - uses: actions/download-artifact@v3
-      - name: Query tag name
-        uses: little-core-labs/get-git-tag@v3.0.2
-        id: tagName
       - name: Create release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.tagName.outputs.tag }}
-          release_name: ${{ steps.tagName.outputs.tag }}
+          tag_name: ${{ github.ref_name }}
+          release_name: ${{ github.ref_name }}
           draft: false
           prerelease: false
       - name: Upload artifacts
-        uses: alexellis/upload-assets@0.2.3
+        uses: alexellis/upload-assets@0.4.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
