msvc: copy openssl dlls (#6428)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,9 @@ option(ENABLE_QT_TRANSLATION "Enable translations for the Qt frontend" OFF)
 CMAKE_DEPENDENT_OPTION(CITRA_USE_BUNDLED_QT "Download bundled Qt binaries" ON "ENABLE_QT;MSVC" OFF)
 
 option(ENABLE_WEB_SERVICE "Enable web services (telemetry, etc.)" ON)
+if (MSVC)
+    set(OPENSSL_DLL_DIR "" CACHE PATH "Location of the Openssl dlls")
+endif()
 
 option(ENABLE_CUBEB "Enables the cubeb audio backend" ON)
 
