--- a/src/citra/CMakeLists.txt
+++ b/src/citra/CMakeLists.txt
@@ -34,6 +34,10 @@ endif()
 if (MSVC)
     include(CopyCitraSDLDeps)
     copy_citra_SDL_deps(citra)
+    if (ENABLE_WEB_SERVICE AND OPENSSL_DLL_DIR)
+        include(CopyCitraOpensslDeps)
+        copy_citra_openssl_deps(citra)
+    endif()
 endif()
 
 if (CITRA_USE_PRECOMPILED_HEADERS)
