--- a/src/citra_qt/CMakeLists.txt
+++ b/src/citra_qt/CMakeLists.txt
@@ -322,6 +322,10 @@ if (MSVC)
     include(CopyCitraSDLDeps)
     copy_citra_Qt5_deps(citra-qt)
     copy_citra_SDL_deps(citra-qt)
+    if (ENABLE_WEB_SERVICE AND OPENSSL_DLL_DIR)
+        include(CopyCitraOpensslDeps)
+        copy_citra_openssl_deps(citra-qt)
+    endif()
 
     if (ENABLE_FFMPEG)
         include(CopyCitraFFmpegDeps)
