--- a/src/input_common/CMakeLists.txt
+++ b/src/input_common/CMakeLists.txt
@@ -1,10 +1,6 @@
 add_library(input_common STATIC
     analog_from_button.cpp
     analog_from_button.h
-    gcadapter/gc_adapter.cpp
-    gcadapter/gc_adapter.h
-    gcadapter/gc_poller.cpp
-    gcadapter/gc_poller.h
     keyboard.cpp
     keyboard.h
     main.cpp
@@ -33,10 +29,20 @@ if(ENABLE_SDL2)
     target_compile_definitions(input_common PRIVATE HAVE_SDL2)
 endif()
 
+if(ENABLE_LIBUSB)
+    target_sources(input_common PRIVATE
+        gcadapter/gc_adapter.cpp
+        gcadapter/gc_adapter.h
+        gcadapter/gc_poller.cpp
+        gcadapter/gc_poller.h
+    )
+    target_include_directories(input_common PRIVATE ${LIBUSB_INCLUDE_DIR})
+    target_link_libraries(input_common PRIVATE ${LIBUSB_LIBRARIES})
+    add_definitions(-DENABLE_GCADAPTER)
+endif()
+
 create_target_directory_groups(input_common)
 target_link_libraries(input_common PUBLIC core PRIVATE common ${Boost_LIBRARIES})
-target_include_directories(input_common PRIVATE ${LIBUSB_INCLUDE_DIR})
-target_link_libraries(input_common PUBLIC ${LIBUSB_LIBRARIES})
 set_target_properties(input_common PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${ENABLE_LTO})
 
 if (CITRA_USE_PRECOMPILED_HEADERS)
