--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
     url = https://github.com/neobrain/nihstro.git
 [submodule "soundtouch"]
     path = externals/soundtouch
-    url = https://github.com/citra-emu/ext-soundtouch.git
+    url = https://codeberg.org/soundtouch/soundtouch.git
 [submodule "catch2"]
     path = externals/catch2
     url = https://github.com/catchorg/Catch2
