--- a/src/audio_core/CMakeLists.txt
+++ b/src/audio_core/CMakeLists.txt
@@ -39,6 +39,7 @@ create_target_directory_groups(audio_core)
 target_link_libraries(audio_core PUBLIC common)
 target_link_libraries(audio_core PRIVATE SoundTouch teakra)
 set_target_properties(audio_core PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${ENABLE_LTO})
+add_definitions(-DSOUNDTOUCH_INTEGER_SAMPLES)
 
 if(ENABLE_MF)
     target_sources(audio_core PRIVATE
